force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Total_Chargeable_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Chargeable_Seats__c</fullName>
    <formula>No_of_Adult__c + No_of_Child__c  -  No_of_FOC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Chargeable Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>