force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Total_Fare_Amount_Final__c.field-meta.xml
<CustomField>
    <fullName>Total_Fare_Amount_Final__c</fullName>
    <formula>If ( or(No_of_Adult__c&gt;0,No_of_Child__c &gt;0),

No_of_Adult__c * ( Final_Unit_Price_Adult__c) +
No_of_Child__c * ( Final_Unit_Price_Child__c ) +
No_of_Infant__c *( Final_Unit_Price_Infant__c)    -   No_of_FOC__c * Final_Unit_Price_Adult__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fare Amount(Final)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>