force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Total_Fare_Amount_Initial__c.field-meta.xml
<CustomField>
    <fullName>Total_Fare_Amount_Initial__c</fullName>
    <formula>No_of_Adult__c * ( Initial_Unit_Price_Adult__c  ) +
No_of_Child__c * ( Initial_Unit_Price_Child__c  ) +
No_of_Infant__c *( Initial_Unit_Price_Infant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fare Amount(Initial)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>