force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Total_Initial_Fare_Amount_incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Initial_Fare_Amount_incl_Tax__c</fullName>
    <formula>Total_Fare_Amount_Initial__c + Total_Tax_Amount_Initial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Initial Fare Amount(incl Tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>