force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/tour_Guide_email__c.field-meta.xml
<CustomField>
    <fullName>tour_Guide_email__c</fullName>
    <label>tour Guide email</label>
    <type>Email</type>
</CustomField>