force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/tour_Guide_phone__c.field-meta.xml
<CustomField>
    <fullName>tour_Guide_phone__c</fullName>
    <label>tour Guide phone</label>
    <type>Phone</type>
</CustomField>