force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/recordTypes/Adhoc_Request.recordType-meta.xml
<RecordType>
    <fullName>Adhoc_Request</fullName>
    <active>true</active>
    <description>For Agent to Adhoc Request for Seat Allocation</description>
    <label>Adhoc Request</label>
</RecordType>