force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/recordTypes/Name_List_for_Travel_Agent.recordType-meta.xml
<RecordType>
    <fullName>Name_List_for_Travel_Agent</fullName>
    <active>true</active>
    <label>Name List for Travel Agent</label>
</RecordType>