force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/recordTypes/Planned_Allocation.recordType-meta.xml
<RecordType>
    <fullName>Planned_Allocation</fullName>
    <active>true</active>
    <description>For STARLUX to create Seat Allocation for Travel Agency</description>
    <label>Planned Allocation</label>
</RecordType>