force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/CAN_NOT_ADJUST_ALLOCATED_SEATS.validationRule-meta.xml
<ValidationRule>
    <fullName>CAN_NOT_ADJUST_ALLOCATED_SEATS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(Allocated_Seats__c),
  OR(
    CONTAINS($Profile.Name, &quot;B2B&quot;),
    CONTAINS($Profile.Name, &quot;Community&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Allocated_Seats__c</errorDisplayField>
    <errorMessage>Can not adjust Allocated Seats.</errorMessage>
</ValidationRule>