force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Check_Tour_Guide_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Tour_Guide_Phone_Format</fullName>
    <active>true</active>
    <description>&lt;tour_Guide_phone&gt; must be &quot;+886123456789&quot; format.</description>
    <errorConditionFormula>AND(
Case_ID__r.RecordType.DeveloperName =&quot;Group_Booking&quot;,
Contains($Profile.Name ,&quot;Travel Agent&quot;),
NOT(ISBLANK(tour_Guide_phone__c)),
OR(
NOT(BEGINS(tour_Guide_phone__c,&quot;+886&quot;)),
MID(tour_Guide_phone__c,5,1) = &quot;0&quot;,
NOT(ISNUMBER(MID(tour_Guide_phone__c,2,LEN(tour_Guide_phone__c)-1)))
)
)</errorConditionFormula>
    <errorDisplayField>tour_Guide_phone__c</errorDisplayField>
    <errorMessage>&lt;tour_Guide_phone&gt; must be &quot;+886123456789&quot; format.</errorMessage>
</ValidationRule>