force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Group_Booking_Adjustment_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_Adjustment_Negative</fullName>
    <active>true</active>
    <description>Group_Booking Adjustment should be negative</description>
    <errorConditionFormula>And(Text( Allocation_Type__c ) = &quot;Adjustment&quot;,  Allocated_Seats__c &gt;=0)</errorConditionFormula>
    <errorDisplayField>Allocated_Seats__c</errorDisplayField>
    <errorMessage>Adjustment should be negative</errorMessage>
</ValidationRule>