force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Group_Booking_APN_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_APN_Phone</fullName>
    <active>true</active>
    <description>Check Phone Format To Inclue + and all numbers (大綜)</description>
    <errorConditionFormula>Case_ID__r.RecordType.DeveloperName =&quot;Group_Booking&quot;&amp;&amp;
NOT(ISBLANK(tour_Guide_phone__c))&amp;&amp;
NOT(REGEX(tour_Guide_phone__c, &quot;\\+[0-9]{1,13}&quot;))&amp;&amp;
NOT(REGEX(tour_Guide_phone__c, &quot;\\+&quot;))</errorConditionFormula>
    <errorMessage>開頭請輸入+與國碼。 例如 +886922123456</errorMessage>
</ValidationRule>