force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Group_Booking_Blank_APN.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_Blank_APN</fullName>
    <active>true</active>
    <errorConditionFormula>And(
Contains( $Profile.Name ,&quot;Travel Agent&quot;),
OR
 (ISBLANK(tour_Guide_email__c ), ISBLANK( tour_Guide_phone__c  )),
OR
(
Text( Case_ID__r.Status )= &quot;Request for Ticketing&quot;,
Text( Case_ID__r.Status )= &quot;Waiting for Payment&quot;,
Text( Case_ID__r.Status )= &quot;Processing Payment&quot;,
Text( Case_ID__r.Status )= &quot;Payment Details Incorrect&quot;,
Text( Case_ID__r.Status )= &quot;Ready for Ticketing&quot;,
Text( Case_ID__r.Status )= &quot;Ticket Issued&quot;,
Text( Case_ID__r.Status )= &quot;Closed&quot;
),
Case_ID__r.RecordType.DeveloperName =&quot;Group_Booking&quot;
)</errorConditionFormula>
    <errorMessage>請檢查SAT的APN資訊</errorMessage>
</ValidationRule>