force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Group_Booking_Change_APN.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_Change_APN</fullName>
    <active>false</active>
    <errorConditionFormula>And(
Contains( $Profile.Name ,&quot;Travel Agent&quot;),
OR
 (ISCHANGED( tour_Guide_email__c ), 
  ISCHANGED( tour_Guide_phone__c  )),
AND
(
Text( Case_ID__r.Status ) != &quot;New&quot;,
Text( Case_ID__r.Status ) != &quot;ticket sales in progress&quot;
),
Case_ID__r.RecordType.DeveloperName =&quot;Group_Booking&quot;
)</errorConditionFormula>
    <errorMessage>此狀態不開放編輯APN資訊</errorMessage>
</ValidationRule>