force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Group_Booking_Change_No_Of_Pax.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_Change_No_Of_Pax</fullName>
    <active>true</active>
    <description>Not allow changing No of Pax after Case Status &quot;Waiting for Payment&quot;</description>
    <errorConditionFormula>And(

Or(ischanged(  No_of_Adult__c ),
   ischanged(  	No_of_Child__c ), 
   ISCHANGED(No_of_Infant__c),
   ischanged(  No_of_FOC__c )
  ),


 Text(Case_ID__r.Status )!= &quot;New&quot;,
 Text(Case_ID__r.Status )!= &quot;Ticket Sales in Progress&quot;,
 Text(Case_ID__r.Status )!= &quot;Request for Ticketing&quot;,
 Text(Case_ID__r.Status )!= &quot;Price Approving&quot;,
 Text(Case_ID__r.Status )!= &quot;Adhoc Request Approved&quot;

)</errorConditionFormula>
    <errorMessage>Not allow changing No. of Pax after the Case Status &quot;Waiting for Payment&quot;</errorMessage>
</ValidationRule>