force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Group_Booking_Restrict_Allocated_Seats.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_Restrict_Allocated_Seats</fullName>
    <active>true</active>
    <description>Either Allocated Seats or Final Sales Seats(count by create name list apex) must be less than or equal to 30.</description>
    <errorConditionFormula>Requested_Seats__c &gt; $CustomMetadata.Group_Default_SAT_Maximum_Seats__mdt.DEP_From_TPE.Number_of_Maximum_Seats__c|| 
Allocated_Seats__c &gt; $CustomMetadata.Group_Default_SAT_Maximum_Seats__mdt.DEP_From_TPE.Number_of_Maximum_Seats__c || 
Final_Sales_Seats__c &gt; $CustomMetadata.Group_Default_SAT_Maximum_Seats__mdt.DEP_From_TPE.Number_of_Maximum_Seats__c</errorConditionFormula>
    <errorMessage>Either Allocated Seats or Final Sales Seats(Counted by &quot;Create Name List&quot; apex) must be less than 30.</errorMessage>
</ValidationRule>