force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Need_Fill_Adjustment_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Fill_Adjustment_Type</fullName>
    <active>true</active>
    <description>Need fill adjustment Type of allocation type is adjustment</description>
    <errorConditionFormula>And(Text( Allocation_Type__c )=&quot;Adjustment&quot;, Isblank (Text( Adjust_Type__c )))</errorConditionFormula>
    <errorDisplayField>Adjust_Type__c</errorDisplayField>
    <errorMessage>Need select Adjust Type if allocation type is Adjustment</errorMessage>
</ValidationRule>