force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Need_Fill_PNR_for_Adjustment.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Fill_PNR_for_Adjustment</fullName>
    <active>true</active>
    <description>For Adjustment, need fill PNR</description>
    <errorConditionFormula>And(Text( Allocation_Type__c )=&quot;Adjustment&quot;,  isblank( Booking_Reference_PNR__c ) )</errorConditionFormula>
    <errorDisplayField>Booking_Reference_PNR__c</errorDisplayField>
    <errorMessage>For adjustment, please fill Booking Reference No.(PNR)</errorMessage>
</ValidationRule>