force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Seat_Sales_Cannot_Be_Larger_Than_Final.validationRule-meta.xml
<ValidationRule>
    <fullName>Seat_Sales_Cannot_Be_Larger_Than_Final</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
Total_Seat_Sales__c &gt; Final_Allocated_Seats__c,
Total_Seat_Sales__c &lt; 0)</errorConditionFormula>
    <errorMessage>Total Seat Sales CANNOT be Larger than Final Allocated Seats or Less than 0</errorMessage>
</ValidationRule>