force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Tour_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Tour_Code_Format</fullName>
    <active>true</active>
    <description>&lt;Tour Code&gt; must be &quot;ZZZZ99&quot; format.</description>
    <errorConditionFormula>NOT(IF(
  Tour_Code__c != &quot;&quot;,
  IF(
    AND(
      LEN(Tour_Code__c) = 6,
      REGEX(Tour_Code__c, &quot;[0-9A-Z]{6}&quot;),
      REGEX(MID(Tour_Code__c, 1, 1), &quot;[A-Z]{1}&quot;),
      REGEX(MID(Tour_Code__c, 2, 1), &quot;[A-Z]{1}&quot;),
      REGEX(MID(Tour_Code__c, 3, 1), &quot;[A-Z]{1}&quot;),
      REGEX(MID(Tour_Code__c, 4, 1), &quot;[A-Z]{1}&quot;),
      REGEX(MID(Tour_Code__c, 5, 1), &quot;[0-9]{1}&quot;),
      REGEX(MID(Tour_Code__c, 6, 1), &quot;[0-9]{1}&quot;)
    ),
    TRUE,
    FALSE
  ),
  TRUE
)
)</errorConditionFormula>
    <errorMessage>請確認Tour Code格式，應為 「ABCD99」(大寫英文4碼+數字2碼)</errorMessage>
</ValidationRule>