force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/validationRules/Travel_Agent_Cant_Revise_Fianl_Allocated.validationRule-meta.xml
<ValidationRule>
    <fullName>Travel_Agent_Cant_Revise_Fianl_Allocated</fullName>
    <active>true</active>
    <description>Travel Agent Cant Revise Fianl Allocated Seat</description>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;B2B Travel Agent Community Plus&quot;,
    ISCHANGED(Final_Allocated_Seats__c)
)</errorConditionFormula>
    <errorMessage>因【機位數量】已異動，請重新整理此頁面，並重新對團。</errorMessage>
</ValidationRule>