force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>KK_Status__c</columns>
    <columns>Departing_PNR_Status__c</columns>
    <columns>Returning_PNR_Status__c</columns>
    <columns>Get_Updates_Status__c</columns>
    <columns>NAME</columns>
    <columns>Case_ID__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Booking_Reference_PNR__c</columns>
    <columns>Allocated_Seats__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Allocation_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Sync_SAT_Status__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>