force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/listViews/Revenue_KK_only.listView-meta.xml
<ListView>
    <fullName>Revenue_KK_only</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
    <columns>NAME</columns>
    <columns>Case_ID__c</columns>
    <columns>Travel_Agency__c</columns>
    <columns>Booking_Reference_PNR__c</columns>
    <columns>Allocation_Type__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Departing_PNR_Status__c</columns>
    <columns>Returning_Flight_Date__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Returning_PNR_Status__c</columns>
    <columns>Allocated_Seats__c</columns>
    <columns>Final_Sales_Seats__c</columns>
    <columns>Reasons__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allocation_Type__c</field>
        <operation>equals</operation>
        <value>SRS,ADC</value>
    </filters>
    <filters>
        <field>Allocated_Seats__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Departing_PNR_Status__c</field>
        <operation>contains</operation>
        <value>HN,TN</value>
    </filters>
    <filters>
        <field>Returning_PNR_Status__c</field>
        <operation>contains</operation>
        <value>HN,TN</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/15/2023</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>10/31/2024</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>6/2/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Departing_Flight_Number__c</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Seat_Allocation_and_Ticketing__c.Planned_Allocation</value>
    </filters>
    <label>Revenue KK Use_ HN&amp;TN Status</label>
    <sharedTo>
        <role>B2B_Sales_Director</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>