force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/listViews/Revenue_KK_Use_HN_Status.listView-meta.xml
<ListView>
    <fullName>Revenue_KK_Use_HN_Status</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6 AND 7 AND 8 AND 9</booleanFilter>
    <columns>KK_Status__c</columns>
    <columns>NAME</columns>
    <columns>Case_ID__c</columns>
    <columns>Travel_Agency__c</columns>
    <columns>Booking_Reference_PNR__c</columns>
    <columns>Allocation_Type__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Departing_PNR_Status__c</columns>
    <columns>Returning_Flight_Date__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Returning_PNR_Status__c</columns>
    <columns>Allocated_Seats__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allocated_Seats__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Allocation_Type__c</field>
        <operation>equals</operation>
        <value>SRS,ADC</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Departing_PNR_Status__c</field>
        <operation>equals</operation>
        <value>KK</value>
    </filters>
    <filters>
        <field>Returning_PNR_Status__c</field>
        <operation>equals</operation>
        <value>KK</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2023</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2023</value>
    </filters>
    <filters>
        <field>Departing_Flight_Number__c</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>5/10/2023 12:00 AM</value>
    </filters>
    <label>Revenue KK Use_ KK Status</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>